# giva-databricks

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
giva/: __init__.py  installer.py
giva/app/: admin_config.json  app.yaml  requirements.txt
giva/app/backend/: main.py  requirements.txt
giva/app/backend/static/: index.html
giva/app/backend/static/assets/: index-D6MpWnWX.css  index-DGLl4N3w.js
giva/conf/: giva.json
giva/dashboards/: giva.lvdash.json
giva/data/: enriched_jewelry_products.parquet  jewelry_embeddings.parquet
giva/data/analytics/: dim_users.parquet  fact_metal_prices.parquet  fact_nudges.parquet  fact_order_items.parquet  fact_wishlists.parquet
giva/genie/: instructions.md
giva/jobs/: metals_refresh.job.json  nudge_emails.job.json
giva/notebooks/: continuous_data_generator.py  lakebase_cdc_ingestion.py  refresh_metal_prices.py  send_nudge_emails.py
giva/sql/: lakebase_schema.sql  setup.sql
notebooks/: 00-START-HERE-GIVA.py
scripts/: _verify_fixes.py  build_wheel.py  export_live_assets.py  generate_data.py  setup_vector_search.py
