[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "giva-databricks"
version = "0.1.0"
description = "One-line installer for the GIVA Databricks demo (AI jewelry commerce: data + Vector Search + Genie + AI/BI dashboard + Lakebase + FastAPI app + paused background jobs)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Anuj Lathi" }]
keywords = ["databricks", "genie", "ai-bi", "vector-search", "lakebase", "apps", "retail", "demo", "dbdemos"]
dependencies = [
  "databricks-sdk>=0.33.0",
  "psycopg2-binary>=2.9.9",
]

[project.urls]
Homepage = "https://github.com/anuj1303/giva-databricks"

[tool.setuptools]
packages = ["giva"]
include-package-data = true

[tool.setuptools.package-data]
giva = [
  "conf/*.json",
  "sql/*.sql",
  "genie/*.md",
  "dashboards/*.json",
  "jobs/*.job.json",
  "data/*.parquet",
  "data/analytics/*.parquet",
  "data/*.gz",
  "data/lakebase/*.gz",
  "notebooks/*.py",
  "app/*.yaml",
  "app/*.txt",
  "app/*.json",
  "app/backend/*.py",
  "app/backend/static/*",
  "app/backend/static/assets/*",
]
